[package]
name = "kraken-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
cliclack = "0.1.9"
colorful = "0.2.2"
console = "0.15.7"
